Bug 248333 - StreamClientConnection cannot be held by multiple Remote*Proxy objects
Summary: StreamClientConnection cannot be held by multiple Remote*Proxy objects
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-24 23:06 PST by Kimmo Kinnunen
Modified: 2022-12-09 04:20 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2022-11-24 23:06:50 PST
StreamClientConnection cannot be held by multiple Remote*Proxy objects

It is a common pattern for multiple objects to send messages.
Currently they need to navigate to some root object like RRBP to access the connection.
Comment 1 Radar WebKit Bug Importer 2022-11-24 23:07:15 PST
<rdar://problem/102658347>
Comment 2 Kimmo Kinnunen 2022-11-25 04:53:08 PST
Pull request: https://github.com/WebKit/WebKit/pull/6813
Comment 3 EWS 2022-12-09 04:20:39 PST
Committed 257620@main (5d78f243dddd): <https://commits.webkit.org/257620@main>

Reviewed commits have been landed. Closing PR #6813 and removing active labels.